Stable-Diffusion-UI-Agones/ingress-iap/yx-clean-ingress/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sd-nginx
  namespace: default  # 如果不是这个命名空间,则修改
  labels:
    app: sd-nginx # 标签
spec:
  containers:
  - name: sd-nginx
    # image: k8s.gcr.io/nginx-slim:0.8
    image: nginx:1.24.0
    volumeMounts:
    - name: nginx-conf
      # 参考: https://blog.csdn.net/qq_34556414/article/details/115124529
      mountPath: /etc/nginx/conf.d
    - name: nginx-index-html
      mountPath: /etc/nginx/html
  volumes:
  - name: nginx-conf
    configMap:
      name: sd-nginx-configmap
      items: 
      - key: nginx-config.conf
        path: nginx.conf
  - name: nginx-index-html
    configMap:
      name: sd-nginx-configmap
      items:
      - key: index_html.conf
        path: index.html
