Stable-Diffusion-UI-Agones/ingress-iap/yx-clean-ingress/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: sd-nginx-service
spec:
  selector:
    app: sd-nginx # 用于label
    # name: sd-nginx # 用于pod的name
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sd-nginx-ingress
spec:
  defaultBackend:
    service:
      name: sd-nginx-service # Name of the Service targeted by the Ingress
      port:
        number: 8080 # Should match the port used by the Service
# spec:
#   rules:
#   - host: 
#     http:
#       paths:
#       - path: /sd15
#         pathType: Prefix
#         backend:
#           service:
#             name: sd-nginx-service
#             port:
#               name: http
#         # 如果需要配置TLS，取消以下注释并修改相应内容
#         #tls:
#         #- hosts:
#         #  - example.com
#         #  secretName: tls-secret
#       - path: /dreamworld
#         pathType: Prefix
#         backend:
#           service:
#             name: sd-nginx-service
#             port:
#               name: http
